--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,9 +17,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-startup-image" href="facvicon.ico">
-  <link rel="apple-touch-icon" href="favicon.ico">
-  <meta name="apple-mobile-web-app-title" content="Evaluations">
+  <link rel="apple-touch-startup-image" href="apple.ico">
+  <link rel="apple-touch-icon" href="apple.ico">
+  <meta name="apple-mobile-web-app-title" content="Stache Camp">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
