--- a/client/src/index.html
+++ b/client/src/index.html
@@ -17,8 +17,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-startup-image" href="apple.png">
-  <link rel="apple-touch-icon" href="apple.png">
+  <link rel="apple-touch-startup-image" href="/assets/apple.png">
+  <link rel="apple-touch-icon" href="/assets/apple.png">
   <meta name="apple-mobile-web-app-title" content="Stache Camp">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
